--- a/webroot/web/themes/custom/atlantiq/templates/content/node.html.twig
+++ b/webroot/web/themes/custom/atlantiq/templates/content/node.html.twig
@@ -83,28 +83,28 @@
 <article{{ attributes.addClass(classes) }}>
   <header class="{{ layout }}">
     {{ title_prefix }}
-      {% if label and not page %}
-      <h2{{ title_attributes.addClass('node__title') }}>
+    {% if label and not page %}
+      {# Änderung h2 zu h1 tag. Jede h1 bekommt eine ID mit dem Textinhalt um so die OnPage Navigation zu verlinken #}
+      <h1{{ title_attributes.addClass('node__title') }} id="{{ label|render|striptags|trim|lower|replace({' ': '-', '_': '-', '/': '-', '\\': '-'}) }}">
         <a href="{{ url }}" rel="bookmark">{{ label }}</a>
-      </h2>
+      </h1>
     {% endif %}
     {{ title_suffix }}
     {% if display_submitted %}
       <div class="node__meta">
-      {% if author_picture %}
-        <div class="node__author-image">
-          {{ author_picture }}
-        </div>
-      {% endif %}
+        {% if author_picture %}
+          <div class="node__author-image">
+            {{ author_picture }}
+          </div>
+        {% endif %}
         <span{{ author_attributes }}>
-          {{ 'By'|t }} {% apply spaceless %}{{ author_name }}{% endapply %}, {{ date }}
-        </span>
+        {{ 'By'|t }} {% apply spaceless %}{{ author_name }}{% endapply %}, {{ date }}
+      </span>
         {{ metadata }}
       </div>
     {% endif %}
   </header>
   <div{{ content_attributes.addClass('node__content', layout) }}>
-    {# Comments not part of content, so they won't inherit .text-content styles. #}
     {{ content|without('comment') }}
   </div>
   {% if content.comment %}
@@ -113,3 +113,4 @@
     </div>
   {% endif %}
 </article>
+
