--- a/webroot/web/themes/custom/atlantiq/src/scss/_variables.scss
+++ b/webroot/web/themes/custom/atlantiq/src/scss/_variables.scss
@@ -1,2 +1,27 @@
-
 $enable-rounded: false;
+
+/*
+// Farben
+$color-primary: #556cd6;
+$color-secondary: #198754;
+$color-light: #f8f9fa;
+$color-dark: #343a40;
+
+// Typografie
+$font-size-base: 16px;
+$font-size-lg: 18px;
+$font-size-sm: 14px;
+
+// Breakpoints
+$breakpoint-sm: 576px;
+$breakpoint-md: 768px;
+$breakpoint-lg: 992px;
+$breakpoint-xl: 1200px;
+
+// Abstände
+$spacing-xs: 5px;
+$spacing-sm: 10px;
+$spacing-md: 15px;
+$spacing-lg: 20px;
+$spacing-xl: 30px;
+*/
