--- a/webroot/web/themes/custom/atlantiq/src/scss/layout/_nav.scss
+++ b/webroot/web/themes/custom/atlantiq/src/scss/layout/_nav.scss
@@ -1,6 +1,8 @@
 #logo-atlantiq {
-  z-index: 100;
+  z-index: 1031;
   position: absolute;
+  width: 200px;
+  height: 45px;
 }
 #block-atlantiq-footeroben{
   z-index: 1;
