--- a/webroot/web/themes/custom/atlantiq/templates/paragraphs/paragraph--spaltenabschnitt.html.twig
+++ b/webroot/web/themes/custom/atlantiq/templates/paragraphs/paragraph--spaltenabschnitt.html.twig
@@ -88,7 +88,7 @@
                         } %}
                     {% endif %}
 
-                    <div class="mb-3 mb-lg-0{{ itemClass }}">
+                    <div class="mb-3 mb-lg-0 col-lg-4">
                         {{ itemContent }}
                     </div>
                 {% endif %}
