--- a/webroot/web/themes/custom/atlantiq/templates/paragraphs/paragraph--block-hintergrundbild-mit-text-o.html.twig
+++ b/webroot/web/themes/custom/atlantiq/templates/paragraphs/paragraph--block-hintergrundbild-mit-text-o.html.twig
@@ -7,16 +7,18 @@ Theme implementation for a paragraph type with background image, title, and desc
 {% set title_color = paragraph.field_titelfarbe.value %}
 {% set description_color = paragraph.field_beschreibungstextfarbe.value %}
 {% set title_text = paragraph.field_titelbeschriftung_block.value %}
-{% set description_text = paragraph.field_beschreibungstext_rechts.value %}
+{% set description_text = paragraph.field_beschreibungstext_rechts.0.value|striptags %}
 
 {% if paragraph.field_hintergrundbild_block.entity %}
   {% set background_image = file_url(paragraph.field_hintergrundbild_block.entity.fileuri) %}
-<div class="paragraph-block-container">
+<div class="paragraph-text-rechts-oben-container">
 <div{{ attributes.addClass('paragraph', 'paragraph--type--' ~ paragraph.bundle|clean_class) }} style="background-image: url('{{ background_image }}'); height: 100vh; background-size: cover; background-repeat: no-repeat; background-position: center;">
   {% else %}
   <div{{ attributes.addClass('paragraph', 'paragraph--type--' ~ paragraph.bundle|clean_class) }} style="padding: 20px;">
     {% endif %}
-    <h2 style="color: {{ title_color }};">{{ title_text }}</h2>
+    <h1 style="color: {{ title_color }};" id="{{ title_text|render|striptags|trim|lower|replace({' ': '-', '_': '-', '/': '-', '\\': '-'}) }}">
+      {{ title_text }}
+    </h1>
     <p style="color: {{ description_color }};">{{ description_text }}</p>
   </div>
 </div>
