--- a/webroot/web/themes/custom/atlantiq/templates/paragraphs/paragraph--block-text-mitte.html.twig
+++ b/webroot/web/themes/custom/atlantiq/templates/paragraphs/paragraph--block-text-mitte.html.twig
@@ -5,7 +5,9 @@ Theme implementation for a paragraph type with a title and description.
 
 <div{{ attributes.addClass('paragraph', 'paragraph--type--block-text-mitte') }}>
   {% if content.field_titelbeschriftung_mitte %}
-    <h1>{{ content.field_titelbeschriftung_mitte }}</h1>
+    <h1 id="{{ content.field_titelbeschriftung_mitte|render|striptags|trim|lower|replace({' ': '-', '_': '-', '/': '-', '\\': '-'}) }}">
+      {{ content.field_titelbeschriftung_mitte }}
+    </h1>
   {% endif %}
 
   {% if content.field_beschreibungstext_mitte %}
