--- a/webroot/web/themes/custom/atlantiq/src/scss/layout/_layout.scss
+++ b/webroot/web/themes/custom/atlantiq/src/scss/layout/_layout.scss
@@ -8,7 +8,8 @@ main > .container {
   margin-bottom: 1rem;
 }
 .paragraph--type--slider .field__item img{
-  width: 100%;
+  width: 33%;
+  height: auto;
 }
 
 // Allgemeine Container-Styles
