--- a/webroot/web/themes/custom/atlantiq/templates/paragraphs/paragraph--slider.html.twig
+++ b/webroot/web/themes/custom/atlantiq/templates/paragraphs/paragraph--slider.html.twig
@@ -5,33 +5,11 @@
  *
  * Available variables:
  * - paragraph: Full paragraph entity.
- *   Only method names starting with "get", "has", or "is" and a few common
- *   methods such as "id", "label", and "bundle" are available. For example:
- *   - paragraph.getCreatedTime() will return the paragraph creation timestamp.
- *   - paragraph.id(): The paragraph ID.
- *   - paragraph.bundle(): The type of the paragraph, for example, "image" or "text".
- *   - paragraph.getOwnerId(): The user ID of the paragraph author.
- *   See Drupal\paragraphs\Entity\Paragraph for a full list of public properties
- *   and methods for the paragraph object.
- * - content: All paragraph items. Use {{ content }} to print them all,
- *   or print a subset such as {{ content.field_example }}. Use
- *   {{ content|without('field_example') }} to temporarily suppress the printing
- *   of a given child element.
+ * - content: All paragraph items.
  * - attributes: HTML attributes for the containing element.
- *   The attributes.class element may contain one or more of the following
- *   classes:
- *   - paragraphs: The current template type (also known as a "theming hook").
- *   - paragraphs--type-[type]: The current paragraphs type. For example, if the paragraph is an
- *     "Image" it would result in "paragraphs--type--image". Note that the machine
- *     name will often be in a short form of the human readable label.
- *   - paragraphs--view-mode--[view_mode]: The View Mode of the paragraph; for example, a
- *     preview would result in: "paragraphs--view-mode--preview", and
- *     default: "paragraphs--view-mode--default".
  * - view_mode: View mode; for example, "preview" or "full".
- * - logged_in: Flag for authenticated user status. Will be true when the
- *   current user is a logged-in member.
- * - is_admin: Flag for admin user status. Will be true when the current user
- *   is an administrator.
+ * - logged_in: Flag for authenticated user status.
+ * - is_admin: Flag for admin user status.
  *
  * @see template_preprocess_paragraph()
  *
@@ -54,18 +32,23 @@
 
 {% block paragraph %}
   <div{{ attributes.addClass(classes).setAttribute('id', aq_slider_id) }}>
+    <div class="carousel-indicators">
+      {% for i in range(0, image_count - 1) %}
+        <button type="button" data-bs-target="#{{ aq_slider_id }}" data-bs-slide-to="{{ i }}" class="{{ loop.first ? 'active' : '' }}" aria-current="{{ loop.first ? 'true' : 'false' }}" aria-label="Slide {{ i + 1 }}"></button>
+      {% endfor %}
+    </div>
     {% block content %}
       {{ content }}
-        {% if image_count > 1 %}
-          <button class="carousel-control-prev" type="button" data-bs-target="#{{ aq_slider_id }}" data-bs-slide="prev">
-            <span class="carousel-control-prev-icon" aria-hidden="true"></span>
-            <span class="visually-hidden">Previous</span>
-          </button>
-          <button class="carousel-control-next" type="button" data-bs-target="#{{ aq_slider_id }}" data-bs-slide="next">
-            <span class="carousel-control-next-icon" aria-hidden="true"></span>
-            <span class="visually-hidden">Next</span>
-          </button>
-        {% endif %}
+      {% if image_count > 1 %}
+        <button class="carousel-control-prev" type="button" data-bs-target="#{{ aq_slider_id }}" data-bs-slide="prev">
+          <span class="carousel-control-prev-icon" aria-hidden="true"></span>
+          <span class="visually-hidden">Previous</span>
+        </button>
+        <button class="carousel-control-next" type="button" data-bs-target="#{{ aq_slider_id }}" data-bs-slide="next">
+          <span class="carousel-control-next-icon" aria-hidden="true"></span>
+          <span class="visually-hidden">Next</span>
+        </button>
+      {% endif %}
     {% endblock %}
   </div>
 {% endblock paragraph %}
