--- a/webroot/web/themes/custom/atlantiq/src/scss/base/_colors.scss
+++ b/webroot/web/themes/custom/atlantiq/src/scss/base/_colors.scss
@@ -1,5 +1,9 @@
-$primary-color: #333;
-$secondary-color: #f0f0f0;
+// colors.scss
 
+$color-white: #f1f1f1;
+$color-yellow: #ffff00;
+$color-black: #000000;
+
+// Spezifische Farben und Layout-Dimensionen
 $yellow-background: #FFFF00;
 $light-grey-background: #F1f1f1;
