--- a/webroot/web/themes/custom/atlantiq/src/scss/layout/_scroll.scss
+++ b/webroot/web/themes/custom/atlantiq/src/scss/layout/_scroll.scss
@@ -1,4 +1,4 @@
-$container-scroll-margin: 0 25vw 0 33vw;
+$container-scroll-margin: 15vh 25vw 0 33vw;
 .datenschutz-container {
   height: 561px;
   overflow-y: scroll;
