--- a/webroot/web/themes/custom/atlantiq/src/scss/base/_fonts.scss
+++ b/webroot/web/themes/custom/atlantiq/src/scss/base/_fonts.scss
@@ -1,3 +1,9 @@
+// fonts.scss
+
+// Font-Familien
+$font-family-heading: 'Knockout 69 Full Liteweight', Impact, sans-serif;
+$font-family-body: 'DIN Next LT Pro Condensed', sans-serif;
+
 @font-face {
   font-family: 'CharterBT-Bold';
   src: url('../../fonts/3249CF_0_0.eot');
@@ -23,27 +29,4 @@
   url('../../fonts/3249CF_2_0.woff2') format('woff2'),
   url('../../fonts/3249CF_2_0.woff') format('woff'),
   url('../../fonts/3249CF_2_0.ttf') format('truetype');
-}
-
-body {
-  font-family: 'CharterBT-Roman', sans-serif;
-}
-
-h1, h2, h3, h4, h5, h6 {
-  font-family: 'CharterBT-Bold', sans-serif;
-}
-
-em, i {
-  font-family: 'CharterBT-Italic', sans-serif;
-}
-
-
-a {
-  text-decoration: none;
-  color: inherit;
-}
-ul {
-  list-style-type: none;
-  padding: 0;
-  margin: 0;
 }
