--- a/webroot/web/themes/custom/atlantiq/src/scss/layout/_footer.scss
+++ b/webroot/web/themes/custom/atlantiq/src/scss/layout/_footer.scss
@@ -10,6 +10,8 @@
   justify-content: space-between;
   align-items: center;
   padding: 0 20px;
+  margin-bottom: 2rem;
+  margin-right: 2rem;
 
   .field {
     margin-right: 15px;
@@ -18,6 +20,10 @@
       margin-right: 0;
     }
   }
+}
+.footer-column {
+  margin-left: 1rem;
+  margin-right: 1rem;
 }
 
 #block-atlantiq-beschreibungstextlinks{
