--- a/webroot/web/themes/custom/atlantiq/src/scss/theme.scss
+++ b/webroot/web/themes/custom/atlantiq/src/scss/theme.scss
@@ -62,6 +62,8 @@
 @import "base/fonts";
 @import "base/mixins";
 @import "base/colors";
+@import "layout/breakpoints";
+@import "base/typography";
 @import "base/base";
 @import "layout/layout";
 @import "layout/footer";
