--- a/webroot/web/themes/custom/atlantiq/templates/layout/page.html.twig
+++ b/webroot/web/themes/custom/atlantiq/templates/layout/page.html.twig
@@ -52,7 +52,7 @@
     <div class="d-flex justify-content-center">
       <a class="navbar-brand" href="{{ path('<front>') }}"><img src="{{ '/' ~ active_theme_path() ~ '/img/logo/ATLANTIQ_Logo_RZ.svg' }}" alt="Logo Atlantiq" class="img-fluid logo" id="logo-atlantiq"></a>
     </div>
-    <nav class="container navbar navbar-expand-xl fixed-top">
+    <nav class="navbar navbar-expand-xl fixed-top custom-nav">
       <div class="container-fluid">
         <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarAtlantiq" aria-controls="navbarAtlantiq" aria-expanded="false" aria-label="Toggle navigation">
           <span class="navbar-toggler-icon"></span>
