--- a/webroot/web/themes/custom/atlantiq/templates/paragraphs/paragraph--block-hintergrundbild-mit-text-o.html.twig
+++ b/webroot/web/themes/custom/atlantiq/templates/paragraphs/paragraph--block-hintergrundbild-mit-text-o.html.twig
@@ -11,14 +11,24 @@ Theme implementation for a paragraph type with background image, title, and desc
 
 {% if paragraph.field_hintergrundbild_block.entity %}
   {% set background_image = file_url(paragraph.field_hintergrundbild_block.entity.fileuri) %}
-<div class="paragraph-text-rechts-oben-container">
-<div{{ attributes.addClass('paragraph', 'paragraph--type--' ~ paragraph.bundle|clean_class) }} style="background-image: url('{{ background_image }}'); height: 100vh; background-size: cover; background-repeat: no-repeat; background-position: center;">
-  {% else %}
-  <div{{ attributes.addClass('paragraph', 'paragraph--type--' ~ paragraph.bundle|clean_class) }} style="padding: 20px;">
-    {% endif %}
-    <h1 style="color: {{ title_color }};" id="{{ title_text|render|striptags|trim|lower|replace({' ': '-', '_': '-', '/': '-', '\\': '-'}) }}">
-      {{ title_text }}
-    </h1>
-    <p style="color: {{ description_color }};">{{ description_text }}</p>
+  <div class="paragraph-text-rechts-oben-container" style="background-image: url('{{ background_image }}'); height: 100vh; background-size: cover; background-repeat: no-repeat; background-position: center;">
+    <div class="content">
+      <h1 style="color: {{ title_color }};" id="{{ title_text|render|striptags|trim|lower|replace({' ': '-', '_': '-', '/': '-', '\\': '-'}) }}">
+        {{ title_text }}
+      </h1>
+      <p style="color: {{ description_color }};">{{ description_text }}</p>
+    </div>
   </div>
-</div>
+{% else %}
+  <div class="paragraph-text-rechts-oben-container" style="padding: 20px;">
+    <div class="content">
+      <h1 style="color: {{ title_color }};" id="{{ title_text|render|striptags|trim|lower|replace({' ': '-', '_': '-', '/': '-', '\\': '-'}) }}">
+        {{ title_text }}
+      </h1>
+      <p style="color: {{ description_color }};">{{ description_text }}</p>
+    </div>
+  </div>
+{% endif %}
+
+
+
